@@ -1,3 +1,8 @@
+2010-07-30 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCC.y: fixed bug 1579664
+	* support/regression/tests/bug1579664.c: new, added
+
 2010-07-29 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCerr.c,
